# groxery

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/migrations/2019-12-30-202343_create_grocery/: down.sql  up.sql
backend/migrations/2020-01-04-141052_create_grocery_list/: down.sql  up.sql
backend/migrations/2020-05-24-112858_add_amount_checked_to_listentry/: down.sql  up.sql
backend/src/: db.rs  grocery.rs  groceryio.rs  main.rs  schema.rs
elm/: elm.json  make.sh
elm/public/: index.html  style.css
elm/src/: Decoders.elm  Encoders.elm  GroceriesView.elm  Grocery.elm  GroceryListView.elm  GroceryModel.elm  GroceryView.elm  GroxeryMsg.elm  Main.elm  Requests.elm  Routes.elm  Style.elm  UI.elm
elm/src/Elements/: GroceryListItem.elm  Modal.elm  ModalType.elm  NewGroceryListEntryModal.elm  NewGroceryModal.elm  SearchableInput.elm
frontend/: package-lock.json  package.json
frontend/src/: example.js  home.js  index.js  main.js  requests.js
