[package]
name = "groxery"
version = "0.1.0"
authors = ["Malcolm <malcolm.wigren@attentec.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_cors = "0.5.0"
uuid = {version = "0.7", features = ["serde", "v4"]}
diesel = { version = "1.4.0", features = ["postgres"] }
dotenv = "0.9.0"
enum-primitive-derive = "^0.1"
num-traits = "^0.1"
